# templo-sagrado

./: .env  .gitignore  Cargo.toml  Rocket.toml  do.ini
migrations/2020-05-01-152938_init_db/: up.sql
migrations/2020-05-07-041748_chat/: down.sql  up.sql
migrations/2020-05-19-171130_clerk_info_bank/: up.sql
migrations/2020-05-28-174125_pages/: down.sql  up.sql
migrations/2020-06-08-190253_product_list/: up.sql
python-payments/payments/: db.sqlite3
python-payments/payments/easymail/: apps.py  urls.py  views.py
python-payments/payments/payments/: settings.py  urls.py  urls.py.save
python-payments/payments/paypal_pay/: apps.py  paypal_live_config.py  paypal_orders.py  paypal_sandbox_config.py  urls.py  views.py
python-payments/payments/stripe_pay/: teste-cobrancamanual.py  urls.py  views.py
src/: attend.rs  helpers.rs  main.rs  schema.rs  sitemap.rs  textchat.rs  voicechat.rs
src/controller/: home_old.rs  mod.rs  pages.rs  payments.rs  reports.rs
src/controller/blog/: mod.rs
src/controller/chat/: mod.rs
src/controller/clerk/: create.rs  mod.rs  read.rs  schedule.rs  update.rs
src/controller/clients/: create.rs  mod.rs  read.rs
src/controller/config/: attendance_tag.rs  mod.rs
src/controller/home/: attendance.rs  mod-before-sitemap.rs  mod.rs  privacidade-before-sitemap.rs  privacidade.rs
src/controller/intends/: mod.rs  read.rs
src/controller/logs/: panics.rs
src/controller/mail/: create.rs  mod.rs  send.rs
src/controller/product/: create.rs  mod.rs  read.rs  single.rs  update.rs
src/controller/product_OLD/: create.rs  mod.rs  (+4 more)
src/models/: enums.rs  mod.rs  rdatatables.rs
templates/: mail-answer.html.hbs  mail-notify.html.hbs  mail-pass.html.hbs
templates/clerk/: footer.html.hbs  header.html.hbs  index.html.hbs
templates/home/: about.html.hbs  backup  blog.html.hbs  buy-minutes.html.hbs  buy-minutes.html.hbs_old  chat_clerk.html.hbs  chat_user.html.hbs  clerk-profile-not-found.html.hbs  clerk-profile.html.hbs  clerk.html.hbs  clerks.html.hbs  client-mail.html.hbs  contact.html.hbs  depos.html.hbs  email_user.html.hbs  faq.html.hbs  fb1.html.hbs  footer-old.html.hbs  footer.html.hbs  header-old.html.hbs  header.html.hbs  index.html.hbs  login-src.html.hbs  my-acc-user.html.hbs  post.html.hbs  privacy.html.hbs  register.html.hbs  savehome.html copy.hbs  testimonial.html.hbs  undermn.html.hbs  voice-test.html.hbs  voip-clerk.html.hbs  voip-user.html.hbs  wait-for-client.html.hbs
templates/pages/: footer.html.hbs  header.html.hbs  login.html.hbs  privacy.html.hbs  side-bar.html.hbs
(+44 files in other folders)
