[package]
authors = ["Luis Von Müller <luis@easywebusa.com>"]
edition = "2018"
name = "templo_sagrado"
version = "1.1.2"

[dependencies]
base64 = "0.9.3"
blake2 = "0.10"
bytes = "0.4"
chrono = {version = "0.4", features = ["serde", "rustc-serialize"]}
curl = "0.4.29"
diesel = {version = "1.4.4", features = ["postgres", "chrono"]}
digest = {version = "0.7", features = ["std"]}
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.1"
handlebars = "3.2.1"
hostname = "0.1.5"
log = "0.4.11"
mail = "0.7.0"
mail-template = "0.6.1"
multipart = "0.16.1"
native-tls = "0.2.4"
new-tokio-smtp = "0.9.1"
rand = "0.7.3"
rdatatables = "0.1.0"
rocket = {version = "0.4.4"}
rocket-multipart-form-data = "0.9.1"
rocket_codegen = "0.4.4"
rocket_cors = "0.5.0"
roxmltree = "0.13.0"
rpassword = "4.0.5"
rust-crypto = "0.2.36"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7"
sitemap = "0.4.1"
tokio = "0.1.11"
tokio-io = "0.1.9"
tokio-tls = "0.2.0"
vec1 = "1.5.0"
ws = "0.9.1"

[profile.release]
opt-level = 3

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates", "json"]
version = "0.4.4"
